[tool.poetry]
name = "masonite-docs-ru"
version = "0.1.0"
description = ""
authors = ["Omelchenko Michael <socanime@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
mkdocs-material = "^8.5.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
